--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "env": "NODE_ENV",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start:dev": "nodemon main.js"
   },
   "repository": {
     "type": "git",
